cmake_minimum_required(VERSION 3.5)

project(FGInput_displayer VERSION 1.0)

include(FetchContent)

set(BUILD_SHARED_LIBS OFF)
FetchContent_Declare(
	SFML
	GIT_REPOSITORY https://github.com/SFML/SFML.git
	GIT_TAG 2.5.1
)
FetchContent_MakeAvailable(SFML)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED true)

add_executable(
	FGInput_displayer
	src/main.cpp
	src/sample.cpp
	src/view.cpp
)

target_link_libraries(
	FGInput_displayer
	sfml-graphics
)

add_custom_command(TARGET FGInput_displayer POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_directory
	${CMAKE_CURRENT_LIST_DIR}/assets $<TARGET_FILE_DIR:FGInput_displayer>/assets
)